[package]
name = "dima-cli"
version = "2.0.2"
description = "A command-line tool that analyses the diversity and motifs of protein sequences"
authors = ["Shan Weera <stwm2@student.london.ac.uk>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/PU-SDS/DiMA"

keywords = ["bioinformatics", "biology", "protein", "virus", "diversity"]

[lib]
crate-type = ["cdylib"]
name = "dima"

[dependencies]
rayon = "1.5"
rand = "0.8.4"
linreg = "0.2.0"
maplit = "1.0.2"
reduce = "0.1.4"
bio = "0.37.0"
serde_json = "1.0.66"
serde = { version = "1.0", features = ["derive"] }
pyo3 = { version = "0.14.1", features = ["extension-module"] }

[package.metadata.maturin]
name = "dima.helpers.dima"
