[package]
name = "dima-cli"
version = "3.2.0"
description = "A command-line tool that analyses the diversity and motifs of protein sequences"
authors = ["Shan Tharanga <stwm2@student.london.ac.uk>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/PU-SDS/DiMA"

keywords = ["bioinformatics", "biology", "protein", "virus", "diversity"]

[lib]
crate-type = ["cdylib"]
name = "dima"

[dependencies]
rayon = "1.5.1"
rand = "0.8.4"
linreg = "0.2.0"
maplit = "1.0.2"
reduce = "0.1.4"
bio = "0.39.1"
serde_json = "1.0.75"
xlsxwriter = "0.3.5"
serde = { version = "1.0.133", features = ["derive"] }
pyo3 = { version = "0.15.1", features = ["extension-module"] }

[package.metadata.maturin]
name = "dima.helpers.dima"
