[tool.poetry]
name = "dima-cli"
version = "2.0.5"
description = "A command-line tool that analyses the diversity and motifs of protein sequences"
authors = ["Shan Tharanga <stwm2@student.london.ac.uk>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/PU-SDS/DiMA"

keywords = ["bioinformatics", "biology", "protein", "virus", "diversity"]

[tool.poetry.dependencies]
python = ">=3.6,<3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
maturin = "maturin>=0.11,<0.12"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0", "maturin>=0.11,<0.12"]
build-backend = "maturin"

[project]
name = "dima-cli"
requires-python = ">=3.6,<3.10"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Natural Language :: English"]

[project.scripts]
dima-cli = "dima.bin._dima:main"
