[tool.poetry]
name = "DiMA"
version = "2.1.3"
description = "A command-line tool that analyses the diversity and motifs of protein sequences"
authors = ["Shan Tharanga <stwm2@student.london.ac.uk>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/PU-SDS/DiMA"

keywords = ["bioinformatics", "biology", "protein", "virus", "diversity"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"

[tool.poetry.dev-dependencies]
GitPython = "^3.1.26"
pytest = "^6.2.4"
maturin = "maturin>=0.11,<0.12"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0", "maturin>=0.11,<0.12"]
build-backend = "maturin"

[project]
name = "dima-cli"
requires-python = ">=3.7,<3.11"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Natural Language :: English"]

[tool.poetry.scripts]
version = '_versioning:main'

[project.scripts]
dima-cli = "dima.bin._dima:main"
