[metadata]
name = perdana-hunana-shanweera
version = 1.0.0-alpha
url = https://github.com/ShanWeera/hunana
author = Shan Tharanga
author_email = stwm2@student.london.ac.uk
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = HUNANA
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
install_requires =
    biopython>=1.78
    scipy>=1.6.0
    jsonpickle>=1.5.0
packages = find:
package_dir=
    =src

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    hunana = hunana.bin._hunana:main

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar