[metadata]
name = dima-cli
version = 1.0.0
url = https://github.com/pu-sds/DiMA
author = Perdana University - School of Data Sciences
author_email = pu.sds@perdanauniversity.edu.my
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Natural Language :: English
description = The command-line interface of DiMA.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
install_requires =
    biopython>=1.6
    scipy>=1.5
    jsonpickle>=1.5
packages = find:
package_dir=
    =src

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    dima-cli = dima.bin._dima:main

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar
